--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Welcome to PlanBrothers image taggers comparison’s documentation! &#8212; PlanBrothers Image Tagging Services comparisson 1.0 documentation</title>
-    <link rel="stylesheet" href="./_static/flasky.css" type="text/css" />
-    <link rel="stylesheet" href="./_static/pygments.css" type="text/css" />
+    <link rel="stylesheet" href="./static/flasky.css" type="text/css" />
+    <link rel="stylesheet" href="./static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
@@ -18,15 +18,15 @@
         SOURCELINK_SUFFIX: '.txt'
       };
     </script>
-    <script type="text/javascript" src="./_static/jquery.js"></script>
-    <script type="text/javascript" src="./_static/underscore.js"></script>
-    <script type="text/javascript" src="./_static/doctools.js"></script>
+    <script type="text/javascript" src="./static/jquery.js"></script>
+    <script type="text/javascript" src="./static/underscore.js"></script>
+    <script type="text/javascript" src="./static/doctools.js"></script>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="Quick Start guide" href="quick-start.html" />
    
   
-  <link media="only screen and (max-device-width: 480px)" href="./_static/small_flask.css" type= "text/css" rel="stylesheet" />
+  <link media="only screen and (max-device-width: 480px)" href="./static/small_flask.css" type= "text/css" rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9">
 
   </head>
@@ -101,7 +101,7 @@ the tags and probability each Service has obtained for such image.</p>
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper">
             <p class="logo"><a href="#">
-              <img class="logo" src="_static/plan_brothers.png" alt="Logo"/>
+              <img class="logo" src="./static/plan_brothers.png" alt="Logo"/>
             </a></p>
   <h3><a href="#">Table Of Contents</a></h3>
   <ul>
@@ -117,7 +117,7 @@ the tags and probability each Service has obtained for such image.</p>
   <div role="note" aria-label="source link">
     <h3>This Page</h3>
     <ul class="this-page-menu">
-      <li><a href="_sources/index.rst.txt"
+      <li><a href="./sources/index.rst.txt"
             rel="nofollow">Show Source</a></li>
     </ul>
    </div>
