--- a/search.html
+++ b/search.html
@@ -6,8 +6,8 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Search &#8212; PlanBrothers Image Tagging Services comparisson 1.0 documentation</title>
-    <link rel="stylesheet" href="_static/flasky.css" type="text/css" />
-    <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
+    <link rel="stylesheet" href="./static/flasky.css" type="text/css" />
+    <link rel="stylesheet" href="./static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
@@ -18,10 +18,10 @@
         SOURCELINK_SUFFIX: '.txt'
       };
     </script>
-    <script type="text/javascript" src="_static/jquery.js"></script>
-    <script type="text/javascript" src="_static/underscore.js"></script>
-    <script type="text/javascript" src="_static/doctools.js"></script>
-    <script type="text/javascript" src="_static/searchtools.js"></script>
+    <script type="text/javascript" src="./static/jquery.js"></script>
+    <script type="text/javascript" src="./static/underscore.js"></script>
+    <script type="text/javascript" src="./static/doctools.js"></script>
+    <script type="text/javascript" src="./static/searchtools.js"></script>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="#" />
   <script type="text/javascript">
@@ -32,7 +32,7 @@
   
    
   
-  <link media="only screen and (max-device-width: 480px)" href="_static/small_flask.css" type= "text/css" rel="stylesheet" />
+  <link media="only screen and (max-device-width: 480px)" href="./static/small_flask.css" type= "text/css" rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9">
 
 
@@ -86,7 +86,7 @@
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper">
             <p class="logo"><a href="index.html">
-              <img class="logo" src="_static/plan_brothers.png" alt="Logo"/>
+              <img class="logo" src="./static/plan_brothers.png" alt="Logo"/>
             </a></p><h3>Related Topics</h3>
 <ul>
   <li><a href="index.html">Documentation overview</a><ul>
